Final corrections in project and manifest files.

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 GLPKMathProgInterface = "3c7084bd-78ad-589a-b5bb-dbd673274bea"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -14,9 +15,10 @@ SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-julia = "1.0"
 CPLEX = "0.4.1"
 DataFrames = "0.14.1"
 GLPKMathProgInterface = "0.4.4"
+JuMP = "0.18.4"
 PackageCompiler = "0.5.0"
 SQLite = "0.7.0"
+julia = "1.0"
