--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 CPLEX = "0.4.1"
 DataFrames = "0.14.1"
 GLPKMathProgInterface = "0.4.4"
-JuMP = "0.18.4+"
+JuMP = "0.18.4"
 PackageCompiler = "0.5.0"
 SQLite = "0.7.0"
 julia = "1.0"
