--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-CPLEX = "0.5.0"
+#CPLEX = "0.5.0"
 Cbc = "0.6.1"
 DataFrames = "0.14.1"
 GLPKMathProgInterface = "0.4.4"
