--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NemoMod"
 uuid = "a3c327a0-d2f0-11e8-37fd-d12fd35c3c72"
 authors = ["Jason Veysey <jason.veysey@sei.org>"]
-version = "1.0.3"
+version = "1.0.4"
 
 [deps]
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
@@ -9,6 +9,7 @@ ConfParser = "88353bc9-fd38-507d-a820-d3b43837d6b9"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 GLPKMathProgInterface = "3c7084bd-78ad-589a-b5bb-dbd673274bea"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
@@ -16,12 +17,12 @@ SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-#CPLEX = "0.5.0"
-Cbc = "0.6.1"
-DataFrames = "0.14.1"
+Cbc = "0.6.3"
+GLPK = "0.10.0"
 GLPKMathProgInterface = "0.4.4"
-JuMP = "0.18.5"
+ConfParser = "0.1.1"
+DataFrames = "0.14.1"
+JuMP = "0.18.6"
 PackageCompiler = "0.5.1"
 SQLite = "0.7.0"
 julia = "1.0"
-ConfParser = "0.1.1"
