--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,8 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
+CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 
 [compat]
 Cbc = "0.6.3"
@@ -25,4 +27,6 @@ DataFrames = "0.14.1"
 JuMP = "0.18.6"
 PackageCompiler = "0.5.1"
 SQLite = "0.7.0"
+Mosek = "0.9.8"
+CPLEX = "0.5.1"
 julia = "1.3"
