--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 GLPKMathProgInterface = "3c7084bd-78ad-589a-b5bb-dbd673274bea"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
+#PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 #Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
@@ -26,7 +26,7 @@ GLPKMathProgInterface = "0.4.4"
 ConfParser = "0.1.1"
 DataFrames = "0.14.1"
 JuMP = "0.18.6"
-PackageCompiler = "0.5.1"
+#PackageCompiler = "0.5.1"
 SQLite = "0.7.0"
 #Mosek = "0.9.8"
 #CPLEX = "0.5.1"
