--- a/Project.toml
+++ b/Project.toml
@@ -23,4 +23,8 @@ GLPK = "0.10.0"
 GLPKMathProgInterface = "0.4.4"
 JuMP = "0.18.6"
 SQLite = "0.7.0"
+PackageCompiler = "0.6.5"
 julia = "1.3"
+
+[extras]
+PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
