--- a/test/Project.toml
+++ b/test/Project.toml
@@ -2,6 +2,7 @@
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 CPLEX = "0.5.1"
