--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,10 +1,16 @@
 [deps]
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
+SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 CPLEX = "0.5.1"
 Gurobi = "0.6.0"
 Mosek = "0.9.8"
+DataFrames = "0.20.2"
+JuMP = "0.18.6"
+SQLite = "1.0.3"
