--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Jason Veysey <jason.veysey@sei.org>"]
 version = "1.0.5"
 
 [deps]
+CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 ConfParser = "88353bc9-fd38-507d-a820-d3b43837d6b9"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
