--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -1,4 +1,4 @@
-; Sample configuration file for |nemo
+; Sample configuration file for NEMO
 
 ; Currently supported sections and keys:
 ;
@@ -14,7 +14,7 @@
 ; customconstraints=path
 ;
 ; Notes
-; • |nemo searches for this file (nemo_config.ini) in the Julia working directory.
+; • NEMO searches for this file (nemo_config.ini) in the Julia working directory.
 ; • Values for keys in [calculatescenarioargs] are string representations of arguments to pass to calculatescenario().
 ;		See the documentation for calculatescenario() for more information.
 ; • varstosave adds to varstosave specified on command line.
@@ -23,8 +23,8 @@
 ; • reportzeros overrides reportzeros specified on command line.
 ; • quiet overrides quiet specified on command line.
 ; • beforescenariocalc defines a path to a .jl file to be included before each
-;		scenario calculation in |nemo (i.e., before each execution of calculatescenario()).
+;		scenario calculation in NEMO (i.e., before each execution of calculatescenario()).
 ;		It is optional.
 ; • customconstraints defines a path to a .jl file to be included when building
-;		constraints during a scenario calculation in |nemo. It is optional.
+;		constraints during a scenario calculation in NEMO. It is optional.
 ; • All paths should be defined relative to the current working directory.
