--- a/Project.toml
+++ b/Project.toml
@@ -26,4 +26,7 @@ GLPK = "0.10.0"
 GLPKMathProgInterface = "0.4.4"
 JuMP = "0.18.6"
 SQLite = "1.0.3"
+Mosek = "0.9.8"
+Gurobi = "0.6.0"
+CPLEX = "0.5.1"
 julia = "1.4"
