Added continuoustransmission parameter

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -7,6 +7,7 @@
 ; targetprocs=List of target process numbers
 ; restrictvars=true or false
 ; reportzeros=true or false
+; continuoustransmission=true or false
 ; quiet=true or false
 ;
 ; [includes]
@@ -21,6 +22,7 @@
 ; • targetprocs adds to targetprocs specified on command line.
 ; • restrictvars overrides restrictvars specified on command line.
 ; • reportzeros overrides reportzeros specified on command line.
+; • continuoustransmission overrides continuoustransmission specified on command line.
 ; • quiet overrides quiet specified on command line.
 ; • beforescenariocalc defines a path to a .jl file to be included before each
 ;		scenario calculation in NEMO (i.e., before each execution of calculatescenario()).
