Enhanced error reporting and began implementing parallelization enhancements
Refactored calculatescenario to improve error reporting.
Added numprocs argument for calculatescenario.

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -4,6 +4,7 @@
 ;
 ; [calculatescenarioargs]
 ; varstosave=Comma-delimited list of model output variables to save
+; numprocs=Number of Julia processes to use for parallelized operations
 ; targetprocs=List of target process numbers
 ; restrictvars=true or false
 ; reportzeros=true or false
@@ -15,10 +16,11 @@
 ; customconstraints=path
 ;
 ; Notes
-; • NEMO searches for this file (nemo_config.ini) in the Julia working directory.
+; • NEMO searches for this file (nemo.ini or nemo.cfg) in the Julia working directory.
 ; • Values for keys in [calculatescenarioargs] are string representations of arguments to pass to calculatescenario().
 ;		See the documentation for calculatescenario() for more information.
 ; • varstosave adds to varstosave specified on command line.
+; • numprocs overrides numprocs specified on command line.
 ; • targetprocs adds to targetprocs specified on command line.
 ; • restrictvars overrides restrictvars specified on command line.
 ; • reportzeros overrides reportzeros specified on command line.
