--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,19 +1,27 @@
 [deps]
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
+ConfParser = "88353bc9-fd38-507d-a820-d3b43837d6b9"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
+GLPKMathProgInterface = "3c7084bd-78ad-589a-b5bb-dbd673274bea"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 
 [compat]
 Cbc = "0.6.3"
-CPLEX = "0.5.1"
+ConfParser = "0.1.2"
 DataFrames = "0.20.2"
-Gurobi = "0.6.0"
+GLPK = "0.10.0"
+GLPKMathProgInterface = "0.4.4"
 JuMP = "0.18.6"
-Mosek = "0.9.8"
 SQLite = "1.0.3"
+Mosek = "0.9.8"
+Gurobi = "0.6.0"
+CPLEX = "0.5.1"
+julia = "1.4"
