--- a/Project.toml
+++ b/Project.toml
@@ -17,16 +17,18 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Xpress = "9e70acf3-d6c9-5be6-b5bd-4e2c73e3e054"
 
 [compat]
 Cbc = "0.6.3"
 ConfParser = "0.1.2"
+CPLEX = "0.5.1"
 DataFrames = "0.20.2"
 GLPK = "0.10.0"
 GLPKMathProgInterface = "0.4.4"
-JuMP = "0.18.6"
-SQLite = "1.0.3"
-Mosek = "0.9.8"
 Gurobi = "0.6.0"
-CPLEX = "0.5.1"
+JuMP = "0.18.6"
+Mosek = "0.9.8"
+SQLite = "1.0.3"
+Xpress = "0.9.1"
 julia = "1.4"
