Adjustment to config file functionality to support numprocs = auto

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -4,7 +4,7 @@
 ;
 ; [calculatescenarioargs]
 ; varstosave=Comma-delimited list of model output variables to save
-; numprocs=Number of Julia processes to use for parallelized operations
+; numprocs=Number of Julia processes to use for parallelized operations (an integer or auto to have NEMO automatically choose)
 ; targetprocs=List of target process numbers
 ; restrictvars=true or false
 ; reportzeros=true or false
