--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
+MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Xpress = "9e70acf3-d6c9-5be6-b5bd-4e2c73e3e054"
@@ -26,7 +26,7 @@ DataFrames = "0.22.5"
 GLPK = "0.14.6"
 Gurobi = "0.9.7"
 JuMP = "0.21.6"
-Mosek = "1.1.3"
+MosekTools = "0.9.4"
 SQLite = "1.1.1"
 Xpress = "0.12.2"
 julia = "1.5"
