Initial commit for v. 1.3.1
Key changes:

- Added forcemip argument to calculatescenario and NEMO configuration file

- Added solver block and parameters key to NEMO configuration file

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -9,7 +9,11 @@
 ; restrictvars=true or false
 ; reportzeros=true or false
 ; continuoustransmission=true or false
+; forcemip=true or false
 ; quiet=true or false
+;
+; [solver]
+; parameters=Comma-delimited list of solver parameters and values in the form parameter1=value1,parameter2=value2
 ;
 ; [includes]
 ; beforescenariocalc=path
@@ -17,6 +21,7 @@
 ;
 ; Notes
 ; • NEMO searches for this file (nemo.ini or nemo.cfg) in the Julia working directory.
+;
 ; • Values for keys in [calculatescenarioargs] are string representations of arguments to pass to calculatescenario().
 ;		See the documentation for calculatescenario() for more information.
 ; • varstosave adds to varstosave specified on command line.
@@ -25,10 +30,14 @@
 ; • restrictvars overrides restrictvars specified on command line.
 ; • reportzeros overrides reportzeros specified on command line.
 ; • continuoustransmission overrides continuoustransmission specified on command line.
+; • forcemip overrides forcemip specified on command line.
 ; • quiet overrides quiet specified on command line.
-; • beforescenariocalc defines a path to a .jl file to be included before each
+;
+; • NEMO infers types of values specified in [solver] parameters using Julia's tryparse function. Values are tested to see if they parse to Bool, Int, and Float64 types. Values that do not parse to any of these types are passed to the solver as strings.
+;
+; • beforescenariocalc defines a path to a Julia file to be included before each
 ;		scenario calculation in NEMO (i.e., before each execution of calculatescenario()).
 ;		It is optional.
-; • customconstraints defines a path to a .jl file to be included when building
+; • customconstraints defines a path to a Julia file to be included when building
 ;		constraints during a scenario calculation in NEMO. It is optional.
 ; • All paths should be defined relative to the current working directory.
