--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NemoMod"
 uuid = "a3c327a0-d2f0-11e8-37fd-d12fd35c3c72"
 authors = ["Jason Veysey <jason.veysey@sei.org>"]
-version = "1.3.1"
+version = "1.4.0"
 
 [deps]
 CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
@@ -13,6 +13,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
 MosekTools = "1ec41992-ff65-5c91-ac43-2df89e9693a4"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
@@ -27,6 +28,7 @@ DataFrames = "0.22.5"
 GLPK = "0.14.6"
 Gurobi = "0.9.9"
 JuMP = "0.21.6"
+MathOptInterface = "0.9.20"
 Mosek = "1.1.3"
 MosekTools = "0.9.4"
 SQLite = "1.1.3"
