Changes to support calculating selected years.

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -3,6 +3,7 @@
 ; Currently supported sections and keys:
 ;
 ; [calculatescenarioargs]
+; calcyears=Comma-delimited list of years to include in scenario calculation
 ; varstosave=Comma-delimited list of model output variables to save
 ; numprocs=Number of Julia processes to use for parallelized operations (a positive integer or 0 for half the number of logical processors on the executing machine)
 ; targetprocs=List of target process numbers
@@ -24,6 +25,7 @@
 ;
 ; • Values for keys in [calculatescenarioargs] are string representations of arguments to pass to calculatescenario().
 ;		See the documentation for calculatescenario() for more information.
+; • calcyears overrides calcyears specified on command line.
 ; • varstosave adds to varstosave specified on command line.
 ; • numprocs overrides numprocs specified on command line.
 ; • targetprocs adds to targetprocs specified on command line.
