Added support for warm starts and returning pre-calculated results.

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -4,11 +4,14 @@
 ;
 ; [calculatescenarioargs]
 ; calcyears=Comma-delimited list of years to include in scenario calculation
-; varstosave=Comma-delimited list of model output variables to save
+; varstosave=Comma-delimited list of model output variables to save in scenario database
 ; restrictvars=true or false
 ; reportzeros=true or false
 ; continuoustransmission=true or false
 ; forcemip=true or false
+; startvalsdbpath=Path to a pre-calculated scenario database used to warm start optimization
+; startvalsvars=Comma-delimited list of model output variables for which to set starting values from warm start database
+; precalcresultspath=Path to a pre-calculated scenario database (or a directory containing a pre-calculated database) that NEMO should copy over database specified in calculatescenario's dbpath argument
 ; quiet=true or false
 ;
 ; [solver]
@@ -29,13 +32,14 @@
 ; • reportzeros overrides reportzeros specified on command line.
 ; • continuoustransmission overrides continuoustransmission specified on command line.
 ; • forcemip overrides forcemip specified on command line.
+; • startvalsdbpath overrides startvalsdbpath specified on command line.
+; • startvalsvars overrides startvalsvars specified on command line.
+; • precalcresultspath overrides precalcresultspath specified on command line.
+; • Values for startvalsdbpath and precalcresultspath that contain spaces should be enclosed in double quotes (").
 ; • quiet overrides quiet specified on command line.
 ;
 ; • NEMO infers types of values specified in [solver] parameters using Julia's tryparse function. Values are tested to see if they parse to Bool, Int, and Float64 types. Values that do not parse to any of these types are passed to the solver as strings.
 ;
-; • beforescenariocalc defines a path to a Julia file to be included before each
-;		scenario calculation in NEMO (i.e., before each execution of calculatescenario()).
-;		It is optional.
-; • customconstraints defines a path to a Julia file to be included when building
-;		constraints during a scenario calculation in NEMO. It is optional.
+; • beforescenariocalc defines a path to a Julia file to be included before each scenario calculation in NEMO (i.e., before each execution of calculatescenario()). It is optional.
+; • customconstraints defines a path to a Julia file to be included when building constraints during a scenario calculation in NEMO. It is optional.
 ; • All paths should be defined relative to the current working directory.
