--- a/Project.toml
+++ b/Project.toml
@@ -28,8 +28,8 @@ GLPK = "1.0.1"
 Gurobi = "0.11.0"
 JuMP = "1.0.0"
 MathOptInterface = "1.1.2"
-#Mosek = "1.2.0"
-#MosekTools = "0.12.1"
+Mosek = "1.2.2"
+MosekTools = "0.12.1"
 SQLite = "1.4.0"
 Xpress = "0.15.1"
 julia = "1.7"
