--- a/.github/workflows/documenter.yml
+++ b/.github/workflows/documenter.yml
@@ -17,7 +17,7 @@ jobs:
           version: '1.7'
       - name: Install dependencies
         #run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
-        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.add("NemoMod"); Pkg.add("Documenter")'
+        run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()))'
       - name: Build and deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # For authentication with GitHub Actions token
