--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 ConfParser = "88353bc9-fd38-507d-a820-d3b43837d6b9"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
@@ -17,6 +18,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Cbc = "1.0.0"
 ConfParser = "0.1.2"
 DataFrames = "1.3.2"
+GLPK = "1.0.1"
 JuMP = "1.0.0"
 MathOptInterface = "1.1.2"
 SQLite = "1.4.0"
