Initial commit for NEMO 1.9

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -7,6 +7,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
@@ -17,15 +18,16 @@ Xpress = "9e70acf3-d6c9-5be6-b5bd-4e2c73e3e054"
 
 [compat]
 CPLEX = "0.9.3"
-Cbc = "1.0.0"
+Cbc = "1.0.1"
 ConfParser = "0.1.2"
-DataFrames = "1.3.3"
+DataFrames = "1.3.4"
 GLPK = "1.0.1"
-Gurobi = "0.11.1"
-JuMP = "1.0.0"
-MathOptInterface = "1.2.0"
-Mosek = "1.2.2"
+Gurobi = "0.11.3"
+HiGHS = "1.1.4"
+JuMP = "1.2.0"
+MathOptInterface = "1.7.0"
+Mosek = "1.2.3"
 MosekTools = "0.12.1"
-SQLite = "1.4.0"
+SQLite = "1.4.1"
 Xpress = "0.15.1"
 julia = "1.7"
