--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -3,6 +3,8 @@
 ; Currently supported sections and keys:
 ;
 ; [calculatescenarioargs]
+; jumpdirectmode=true or false
+; jumpbridges=true or false
 ; calcyears=Comma-delimited list of years to include in scenario calculation
 ; varstosave=Comma-delimited list of model output variables to save in scenario database
 ; restrictvars=true or false
@@ -26,6 +28,8 @@
 ;
 ; • Values for keys in [calculatescenarioargs] are string representations of arguments to pass to calculatescenario().
 ;		See the documentation for calculatescenario() for more information.
+; • jumpdirectmode overrides jumpdirectmode specified on command line.
+; • jumpbridges overrides jumpbridges specified on command line.
 ; • calcyears overrides calcyears specified on command line.
 ; • varstosave adds to varstosave specified on command line.
 ; • restrictvars overrides restrictvars specified on command line.
