After scenario event and saving suboptimal solutions

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -21,6 +21,7 @@
 ;
 ; [includes]
 ; beforescenariocalc=path
+; afterscenariocalc=path
 ; customconstraints=path
 ;
 ; Notes
@@ -45,5 +46,6 @@
 ; • NEMO infers types of values specified in [solver] parameters using Julia's tryparse function. Values are tested to see if they parse to Bool, Int, and Float64 types. Values that do not parse to any of these types are passed to the solver as strings.
 ;
 ; • beforescenariocalc defines a path to a Julia file to be included before each scenario calculation in NEMO (i.e., before each execution of calculatescenario()). It is optional.
+; • afterscenariocalc defines a path to a Julia file to be included after each scenario calculation in NEMO (i.e., after each execution of calculatescenario()). It is optional.
 ; • customconstraints defines a path to a Julia file to be included when building constraints during a scenario calculation in NEMO. It is optional.
 ; • All paths should be defined relative to the current working directory.
