Initial commit for limited foresight

--- a/utils/nemo.ini
+++ b/utils/nemo.ini
@@ -5,7 +5,7 @@
 ; [calculatescenarioargs]
 ; jumpdirectmode=true or false
 ; jumpbridges=true or false
-; calcyears=Comma-delimited list of years to include in scenario calculation
+; calcyears=Years to include in scenario calculation (groups of years are delimited with commas, and years within a group are delimited with vertical bars; groups should be in chronological order and should not overlap; each group is optimized with perfect foresight, with results from prior groups providing starting conditions [so a limited foresight optimization is conducted across all groups]; example: 2025|2027,2030|2032 - optimize 2025 and 2027 with perfect foresight; then optimize 2030 and 2032 with perfect foresight, using results from 2025 and 2027 as starting point)
 ; varstosave=Comma-delimited list of model output variables to save in scenario database
 ; restrictvars=true or false
 ; reportzeros=true or false
