Initial commit for NEMO 2.3

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -17,17 +17,17 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Xpress = "9e70acf3-d6c9-5be6-b5bd-4e2c73e3e054"
 
 [compat]
-CPLEX = "1.0.0"
-Cbc = "1.2.0"
-ConfParser = "0.1.2"
-DataFrames = "1.6.1"
-GLPK = "1.1.3"
-Gurobi = "1.2.1"
-HiGHS = "1.7.4"
-JuMP = "1.15.1"
-MathOptInterface = "1.20.1"
-Mosek = "10.1.3"
-MosekTools = "0.15.1"
-SQLite = "1.6.0"
-Xpress = "0.16.1"
-julia = "1.9"
+CPLEX = "=1.1.1"
+Cbc = "=1.3.0"
+ConfParser = "=0.1.2"
+DataFrames = "=1.8.1"
+GLPK = "=1.2.1"
+Gurobi = "=1.9.2"
+HiGHS = "=1.21.0"
+JuMP = "=1.29.4"
+MathOptInterface = "=1.49.0"
+Mosek = "=11.0.1"
+MosekTools = "=0.15.10"
+SQLite = "=1.8.0"
+Xpress = "=0.17.2"
+julia = "1.12"
