--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NemoMod"
 uuid = "a3c327a0-d2f0-11e8-37fd-d12fd35c3c72"
 authors = ["Jason Veysey <jason.veysey@sei.org>"]
-version = "2.2.0"
+version = "2.3.0"
 
 [deps]
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
@@ -14,10 +14,10 @@ SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-Cbc = "1.2.0"
-ConfParser = "0.1.2"
-DataFrames = "1.6.1"
-JuMP = "1.15.1"
-MathOptInterface = "1.20.1"
-SQLite = "1.6.0"
-julia = "1.9"
+Cbc = "=1.3.0"
+ConfParser = "=0.1.2"
+DataFrames = "=1.8.1"
+JuMP = "=1.29.4"
+MathOptInterface = "=1.49.0"
+SQLite = "=1.8.0"
+julia = "1.12"
